# AdventOfCode

./: .gitignore  README.md
2025/: CMakeLists.txt  README.md  main.cpp
2025/solutions/: Day1.h  Day10.h  Day11.h  Day12.h  Day2.h  Day3.h  Day4.h  Day5.h  Day5Test.txt  Day6.h  Day7.h  Day8.h  Day9.h  FileImport.h  ImportFile.h
